tests/hm_typing/faulty_dict_contains_size.ty
f: fn<a: Contains b> *a, *b -> void : fn a, b do end

start :: fn do
    f' {1:1}, (1, 2, 3)
end

// error: $Violating(..)
